symphony/assets/debug.css
@import url("basic.css");

/* Navigation */
h1,
#nav,
#jump {
	display: block;
	position: fixed;
	top: 3.5em;
	right: 0;
	margin-left: 0;
	width: 19.25em;
	list-style: none;
	text-shadow: -2px 2px 3px #111;
}
h1 {
	top: 1em;
	width: 15.125em;
}
#nav li {
	float: left;
	margin-right: 0.75em;
}
#jump {
	top: 6.5em;
	padding-left: 2em;
	overflow: hidden;
	font-weight: bold;
}
#jump > li > ul {
	font-size: 90.91%;
}
#jump a {
	display: block;
	margin-left: -20em;
	padding: 0.5em 2em 0.5em 20em;
}
#jump a:hover {
	background-color: #30302e;
}
#jump a.active {
	background-color: #393937;
	cursor: default;
}

/* Layout */
pre {
	z-index: 1;
	position: relative;
	border: 1px solid #3e3e3b;
	background-color: #191917;
	white-space: normal;
}
code {
	display: block;
	position: relative;
	margin-left: 3.6em;
	padding: 0.3em 0 0.3em 0.7em;
	white-space: pre;
	white-space: pre-wrap;
}
dl,
code {
	font: 115%/1.5 Monaco, Consolas, Andale Mono, Lucida Console, monospace;
	font-size-adjust: 0.5;
}
dl {
	position: relative;
	border: 1px solid #3e3e3b;
	padding-left: 15em;
	overflow: hidden;
}
dt {
	position: absolute;
	margin: 0 0 -250em -15em;
	padding: 0.3em 14.3em 250.3em 0.7em;
	width: 100%;
	background-color: #191917;
}
dt:hover {
	background-color: #1e1e1c;
}
dd {
	position: relative;
	padding: 0.3em 0.7em;
}

/* Line Numbers */
span[id] {
	z-index: -1;
	position: absolute;
	right: 0;
	left: 0;
	padding-bottom: 250em;
	background-color: #191917;
	color: #666660;
	counter-increment: line-numbers;
}
span[id]:hover,
span[id]:target {
	background-color: #1e1e1c;
	color: #fff;
}
span[id]:first-child {
	margin-top: -0.3em;
	padding-top: 0.3em;
}
span[id]::before {
	content: counter(line-numbers);
	display: block;
	margin: -0.3em 0 -250em -3.6em;
	border-right: 1px solid #3e3e3b;
	padding: 0.3em 0.6em 250em 0;
	width: 3em;
	background-color: #232320;
	text-align: right;
}

/* Syntax Highlighting */
dt,
span.attribute {
	color: #f94;
}
dd,
span.string {
	color: #acf;
}
span.element {
	color: #be5;
}
span.comment,
span.comment * {
	color: #727270;
}

/*
@Rowan: Your highlighter has bugs! :P <!-->-->
span.error {
	background-color: #892005;
	color: #fff;
}
*/

/* Generic Elements */
body {
	padding: 19px 21.25em 19px 19px;
	background-color: #2d2d2a;
	color: #fff;
	font-size: 75%;
}
a {
	color: #bba;
	text-decoration: none;
}
a:hover {
	color: #eed;
}
a.active,
h1 a:link {
	color: #fff;
}
ul {
	margin: 0 0 0 1.5em;
	list-style: none;
}

